--- a/roles/programming/tasks/bash_setup.yml
+++ b/roles/programming/tasks/bash_setup.yml
@@ -35,28 +35,44 @@
   become: yes
 
 - name: change user shell to zsh
-  # become: yes
+  become: yes
   user:
     name: "{{ username }}"
     shell: /bin/zsh
     append: yes
+    group: "{{ username }}"
 
 - name: Check if Oh My Zsh directory exists
   stat:
     path: "/home/{{ username }}/.oh-my-zsh"
   register: ohmyzsh_dir
 
-- name: Run Oh My Zsh installation script
-  shell: sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh) && exit"
-  when: not ohmyzsh_dir.stat.exists
 
-- name: Clone zsh plugins
-  ansible.builtin.git:
-    repo: "https://github.com/Aloxaf/fzf-tab"
-    dest: "/home/{{ username }}/.oh-my-zsh/plugins/fzf-tab"
-  ansible.builtin.git:
-    repo: "https://github.com/zsh-users/zsh-autosuggestions"
-    dest: "/home/{{ username }}/.oh-my-zsh/plugins/fzf-tab"
-  ansible.builtin.git:
-    repo: "https://github.com/z-shell/F-Sy-H.git"
-    dest: "/home/{{ username }}/.oh-my-zsh/plugins/F-Sy-H"
+# - name: Clone Oh-My-Zsh repository
+#   git:
+#     repo: https://github.com/ohmyzsh/ohmyzsh.git
+#     dest: /home/{{ ansible_ssh_user }}/.oh-my-zsh
+#     force: yes
+#   become_user: "{{ ansible_ssh_user }}"
+
+# - name: Copy Zsh configuration
+#   copy:
+#     src: /home/{{ ansible_ssh_user }}/.oh-my-zsh/templates/zshrc.zsh-template
+#     dest: /home/{{ ansible_ssh_user }}/.zshrc
+#   become_user: "{{ ansible_ssh_user }}"
+
+# # - name: Run Oh My Zsh installation script
+# #   shell: sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh) && exit"
+# #   force: yes
+# #   when: not ohmyzsh_dir.stat.exists
+
+# - name: Clone zsh plugins
+#   ansible.builtin.git:
+#     repo: "https://github.com/Aloxaf/fzf-tab"
+#     dest: "/home/{{ username }}/.oh-my-zsh/plugins/fzf-tab"
+#   ansible.builtin.git:
+#     repo: "https://github.com/zsh-users/zsh-autosuggestions"
+#     dest: "/home/{{ username }}/.oh-my-zsh/plugins/fzf-tab"
+#   ansible.builtin.git:
+#     repo: "https://github.com/z-shell/F-Sy-H.git"
+#     dest: "/home/{{ username }}/.oh-my-zsh/plugins/F-Sy-H"
