--- a/roles/programming/tasks/main.yml
+++ b/roles/programming/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 - include_tasks: bash_setup.yml
-- include_tasks: install_emacs.yml
-- include_tasks: create_dev_folders.yml
+# - include_tasks: install_emacs.yml
+# - include_tasks: create_dev_folders.yml
