--- a/roles/system/tasks/essential.yml
+++ b/roles/system/tasks/essential.yml
@@ -1,10 +1,10 @@
 - name: Update packages
+  become: yes
   apt:
     update_cache: yes
     upgrade: yes
 
 - name: Install essential packages
-  include_tasks: common/install_packages.yml
+  include_tasks: roles/common/install_packages.yml
   vars:
     packages: "{{ essential_packages }}"
-
